# EmbededDevelopment

./: README.md
imx8-Hummingboard/: Readme.md  export_compiler
imx8-Hummingboard/HelloWorldCrossCompile/: CMakeLists.txt  source.cpp
imx8-Hummingboard/HelloWorldCrossCompile/toolchain/: imx8_toolchain.cmake
